Add basic app config (shared)
- Pydantic model was used to enforce runtime validation, and using `BaseSettings` allows us to pass
config using env variables etc.
- `lru_cache` combined with `get_app_settings` ensures there's only one instance of config being shared
throughout the application. There are other ways to accomplish this (using classmethods), but although
 they add more features, it comes with additional complexity.
- `update_base` was used to update the base_dir and the fields that depend on it. The other way would
be to set the dependent fields (metrics_dir, artifacts_dir etc) as properties, but that would not
allow us to decouple those fields from `base_dir`. For instance, we may decide to set `data_dir` outside
the project directory. Also, it would require additional code to add validation for those properties
(using field aliases).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Arslan <rslnkrmt2552@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pydantic = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 
