--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Arslan <rslnkrmt2552@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pydantic = "^1.8.1"
+pandas = "^1.2.3"
+numpy = "^1.20.1"
 
 [tool.poetry.dev-dependencies]
 
