--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ authors = ["Arslan <rslnkrmt2552@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pydantic = "^1.8.1"
 pandas = "^1.2.3"
 numpy = "^1.20.1"
+pyarrow = "^3.0.0"
+scikit-learn = "^0.24.1"
+torch = "^1.8.0"
+torchtext = "^0.9.0"
+spacy = "^3.0.5"
+fastapi = "^0.63.0"
+joblib = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
