--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ torchtext = "^0.9.0"
 spacy = "^3.0.5"
 fastapi = "^0.63.0"
 joblib = "^1.0.1"
+uvicorn = "^0.13.4"
+gunicorn = "^20.0.4"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 
