Replace npy files with npz files following change in embed_tfidf stage

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,6 +1,6 @@
 /train_lbl.npy
-/train_tfidf.npy
-/test_tfidf.npy
 /test_lbl.npy
 /valid_lbl.npy
-/valid_tfidf.npy
+/train_tfidf.npz
+/test_tfidf.npz
+/valid_tfidf.npz
